--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -107,6 +107,21 @@
   height: 1em;
   margin-left: 0.5rem;
 }
+.inputBox{
+  width: 200px;
+  height: 30px;
+  margin: 5px;
+}
+.button{
+  width: 100px;
+  height: 30px;
+  cursor: pointer;
+
+}
+.googleAlt{
+  /* width: 100px; */
+  height: 40px;
+}
 
 @media (max-width: 600px) {
   .grid {
